fixing animation and add visibility hidden for class .straight line

--- a/styles/education.css
+++ b/styles/education.css
@@ -86,6 +86,7 @@
   width: 2px;
   right: 50%;
   z-index: 1;
+  visibility: hidden;
 }
 
 .educ-expi .education:hover {
